modules/dnn/test/test_onnx_conformance_denylist.inl.hpp
// The file is autogenerated
// Update note: execute <opencv_extra>/testdata/dnn/onnx/generate_conformance_list.py <gtest_xml_file>

"test_adagrad",  // error: ai.onnx.preview.training:Adagrad(-1) is not a registered function/op
"test_adagrad_multiple",
"test_adam",  // error: ai.onnx.preview.training:Adam(-1)
"test_adam_multiple",
"test_add_uint8",
"test_div_uint8",
"test_max_int16",
"test_max_int8",
"test_max_uint16",
"test_max_uint8",
"test_min_int16",
"test_min_int8",
"test_min_uint16",
"test_min_uint8",
"test_mul_uint8",
"test_pow_types_float32_uint32",
"test_pow_types_float32_uint64",
"test_sub_uint8",

"test_bernoulli", // result is not correct.
"test_bernoulli_double",
"test_bernoulli_double_expanded",
"test_bernoulli_expanded",
"test_bernoulli_seed",
"test_bernoulli_seed_expanded",
"test_bitshift_left_uint16",
"test_bitshift_right_uint16",
"test_cast_BFLOAT16_to_FLOAT",
"test_cast_FLOAT_to_BFLOAT16",

"test_cast_FLOAT_to_STRING",
"test_cast_STRING_to_FLOAT",
"test_castlike_BFLOAT16_to_FLOAT",
"test_castlike_BFLOAT16_to_FLOAT_expanded",

"test_castlike_FLOAT_to_BFLOAT16",
"test_castlike_FLOAT_to_BFLOAT16_expanded",

"test_castlike_FLOAT_to_STRING",
"test_castlike_FLOAT_to_STRING_expanded",
"test_castlike_STRING_to_FLOAT",
"test_castlike_STRING_to_FLOAT_expanded",
"test_gru_batchwise", // Batchwise recurrent operations (layout == 1) are not supported.

// TODO sequnce input, ort can run it.
"test_identity",
"test_identity_opt",
"test_identity_sequence",
"test_if",
"test_if_opt",
"test_if_seq",

"test_loop13_seq",
"test_loop16_seq_none",
"test_lstm_batchwise", // Batchwise recurrent operations (layout == 1) are not supported

"test_maxunpool_export_with_output_shape",// result is not correct

"test_momentum", // ai.onnx.preview.training:Momentum(-1) is not a registered function/op
"test_momentum_multiple",
"test_nesterov_momentum", // Fatal error: ai.onnx.preview.training:Momentum(-1)
"test_training_dropout",
"test_training_dropout_default",
"test_training_dropout_default_mask",
"test_training_dropout_mask",
"test_training_dropout_zero_ratio",
"test_training_dropout_zero_ratio_mask",

"test_optional_get_element",
"test_optional_get_element_sequence",
"test_optional_has_element",
"test_optional_has_element_empty",

"test_reshape_allowzero_reordered", // zero shape can not be supported.
"test_resize_downsample_scales_cubic_align_corners", // result is not correct

"test_sequence_insert_at_back",
"test_sequence_insert_at_front",

"test_simple_rnn_batchwise",

"test_strnormalizer_export_monday_casesensintive_lower",
"test_strnormalizer_export_monday_casesensintive_nochangecase",
"test_strnormalizer_export_monday_casesensintive_upper",
"test_strnormalizer_export_monday_empty_output",
"test_strnormalizer_export_monday_insensintive_upper_twodim",
"test_strnormalizer_nostopwords_nochangecase",